# asmh

./: .gitignore  CHANGELOG.md  LICENSE  README.md  asmh.cabal  cabal.project
.github/workflows/: ci.yml  linting.yml  pre-release.yml
app/: CmdOptions.hs  Main.hs
src/: Bin.hs  Expr.hs  Parser.hs
test/: Spec.hs
test/data/asm/: HexConvertor.asm  calc.asm  colors.com
test/data/emu8086/: celsi.com  hex.com  keybrd.com  mouse.com
test/data/extra/: calc.com.debug  calc.com.list  calc.com.symbol  celsi.com.debug  celsi.com.list  celsi.com.symbol  fact.com.list  fact.com.symbol  hex.com.debug  hex.com.list  hex.com.symbol  keybrd.com.debug  keybrd.com.list  keybrd.com.symbol  mouse.com.debug  mouse.com.list  mouse.com.symbol
