cabal-version: 3.4
name: asmh
version: 0.1.0.0
description: Please see the README on Github at <https://github.com/0rphee/asmh#asmh>
author: 0rphee
maintainer: 0rph3e@proton.me
copyright: 2024 0rphee
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with: ghc ==9.4.8 || ==9.6.5 || ==9.8.2 || ==9.10.1

common common-options
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -fshow-hole-constraints
    -fprint-potential-instances
    -Wno-unticked-promoted-constructors
    -flate-specialise
    -funbox-strict-fields
    -fexpose-all-unfoldings
    -threaded
    -with-rtsopts=-N
    -Wunused-packages

  default-extensions:
    ApplicativeDo
    LambdaCase
    OverloadedStrings
    RecordWildCards

library
  import:
    common-options

  hs-source-dirs:
    src

  exposed-modules:
    Expr

  build-depends:
    attoparsec,
    base >=4.7 && <5,
    bits-show,
    bytestring,
    megaparsec,
    path,
    text,

executable asmh
  import:
    common-options

  hs-source-dirs:
    app

  main-is: Main.hs
  other-modules:
    CmdOptions
    Paths_asmh

  default-extensions:
  build-depends:
    asmh,
    base >=4.7 && <5,
    bits-show,
    bytestring,
    githash,
    opt-env-conf,
    path,
    text,

test-suite asmh-test
  import:
    common-options

  type: exitcode-stdio-1.0
  hs-source-dirs:
    test

  main-is: Spec.hs
  other-modules:
    Paths_asmh

  build-depends:
    asmh,
    attoparsec,
    base >=4.7 && <5,
    bits-show,
    bytestring,
    megaparsec,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,
